--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
     <header>
         <div class="container">
             <div class="header">
-                <a href="#" class="header-logo">     
-                </a>
+               <div class="header-item">
+                    <a href="#" class="header-logo">     
+                    </a>
 
-                <nav>
-                    <ul class="header-nav">
-                        <li><a href="#" class="active">Главная</a></li>
-                        <li><a href="#">Меню</a></li>
-                        <li><a href="#">О нас</a></li>
-                        <li><a href="#">Контакты</a></li>
-                    </ul>
-                </nav>
+                    <nav>
+                        <ul class="header-nav">
+                            <li><a href="#" class="active">Главная</a></li>
+                            <li><a href="#">Меню</a></li>
+                            <li><a href="#">О нас</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                    </nav>
+               </div>
 
                 <button type="button" class="button">
                     <span class="button-item">
@@ -208,7 +210,7 @@
     
                 <div class="footer-item">
                     <h2>основные ссылки</h2>
-                    <ul>
+                    <ul class="footer-list">
                         <li><a href="#">Меню</a></li>
                         <li><a href="#">Заказ и доставка</a></li>
                         <li><a href="#">Методы оплаты</a></li>
@@ -232,9 +234,9 @@
                 </div>
     
                 <div class="footer-tel">
-                    <ul class="footer-list">
-                        <li>+ 7 900 787 13-13</li>
-                        <li>+ 7 900 700 14-14</li>
+                    <ul class="footer-list footer-list-tel">
+                        <li><a href="tel:+79007871313">+ 7 900 787 13-13</a></li>
+                        <li><a href="tel:+79007001414">+ 7 900 700 14-14</a></li>
                     </ul>
                 </div>
             </div>
