--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="visual">
                 <div class="visual-bg"></div>
-                <img src="images/burger.png" alt="Burger">
+                <img src="images/burger.png" alt="Burger" class="visual-img">
             </div>
         </div>
     </div>
