--- a/menu.html
+++ b/menu.html
@@ -226,7 +226,7 @@
                 </div>
     
                 <div class="footer-item">
-                    <h2>основная информация</h2>
+                    <h2 class="footer-title">основная информация</h2>
                     <ul class="footer-list">
                         <li>
                             <span>Время</span>
