--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="visual">
                 <div class="visual-bg"></div>
-                <img src="images/burger.png" alt="Burger">
+                <img src="images/burger.png" alt="Burger" class="visual-img">
             </div>
         </div>
     </div>
@@ -58,10 +58,14 @@
                         <li><a href="#">Методы оплаты</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
+                    <ul class="footer-list footer-list-tel">
+                        <li><a href="tel:+79007871313">+ 7 900 787 13-13</a></li>
+                        <li><a href="tel:+79007001414">+ 7 900 700 14-14</a></li>
+                    </ul>
                 </div>
     
                 <div class="footer-item">
-                    <h2>основная информация</h2>
+                    <h2 class="footer-title">основная информация</h2>
                     <ul class="footer-list">
                         <li>
                             <span>Время</span>
